--- a/src/main/resources/templates/dummy.html
+++ b/src/main/resources/templates/dummy.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Spark LMS - Login</title>
+<title>BOOK STORE - Login</title>
 
 <th:block th:replace="fragments/styles :: common"></th:block>
 
@@ -18,9 +18,6 @@
 
 			<th:block th:replace="fragments/sidemenu :: menu"></th:block>
 			<th:block th:replace="fragments/topmenu :: menu"></th:block>
-
-
-
 
 			<!-- page content -->
 			<div class="right_col" role="main"></div>
