--- a/src/main/resources/templates/book/list.html
+++ b/src/main/resources/templates/book/list.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Spark LMS - Book List</title>
+<title>BOOK STORE- Book List</title>
 
 <th:block th:replace="fragments/styles :: common"></th:block>
 <th:block th:replace="fragments/styles :: datatable"></th:block>
@@ -29,37 +29,28 @@
 							<div class="clearfix"></div>
 						</div>
 						<div class="x_content">
-							
-							<div class="alert alert-success alert-dismissible fade in" role="alert" th:if="${bookInUse}">
-                   			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-	                    	<span>Book is in use, cannot be deleted.</span>
-	                    	</div>
-						
 							<table id="datatable"
 								class="table table-striped table-bordered">
 								<thead>
 									<tr>
-										<th style="width: 350px;">Title</th>
-										<th style="width: 350px;">Price</th>
-										<th>Category</th>
-										<th>Tag</th>
-										<th style="width: 150px;">Authors</th>
-										<th style="width: 50px;">Actions</th>
+										<th style="width: 35%">Title</th>
+										<th style="width: 10%">Price</th>
+										<th style="width: 15%">Category</th>
+										<th style="width: 20%">Authors</th>
+										<th style="width: 3%">Actions</th>
+									<!--	<th style="width: 3%">Details</th>-->
 									</tr>
 								</thead>
 								<tbody>
 									<tr th:each="b : ${books}">
 										<td th:text="${b.title}"></td>
-										<td th:text="${b.tag}"></td>
+										<td th:text="${b.price}"></td>
+										<td th:text="${b.category.name}"></td>
 										<td>
 											<div th:each="a : ${b.author}">
 												<span class=" d-inline p-2 label label-success" th:text="${a.firstName + ' ' + a.middleName + ' ' + a.lastName}"></span>
 											</div>
 										</td>
-										<!--<td th:text="${b.category.name}"></td>
-										<td th:text="${b.tag}"></td>
-										<td th:text="${b.title}"></td>
-										<td th:text="${b.authors}"></td>-->
 										<td>
 											<a th:href="@{'/book/edit/' + ${b.id}}"><i class="fa fa-edit"></i></a>
 											<a data-toggle="modal" data-target=".remove-book-modal" onclick="removeBookDialog(this);"
@@ -67,6 +58,7 @@
 												<i class="fa fa-remove"></i>
 											</a>
 										</td>
+										<!--<td><button type="button" class="btn btn-primary btn-sm">Detils</button> </td>-->
 									</tr>
 								</tbody>
 							</table>
