--- a/src/main/resources/templates/fragments/sidemenu.html
+++ b/src/main/resources/templates/fragments/sidemenu.html
@@ -7,7 +7,7 @@
 	<div class="col-md-3 left_col">
 		<div class="left_col scroll-view">
 			<div class="navbar nav_title" style="border: 0;">
-				<a href="index.html" class="site_title"><i class="fa fa-book"></i>
+				<a href="#" class="site_title"><i class="fa fa-book"></i>
 					<span>Book Store</span></a>
 			</div>
 
