--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,6 +15,10 @@
     <div>
 
       <div class="login_wrapper">
+          <div class="alert alert-danger alert-dismissible fade in" role="alert" th:if="${param.error != null}">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+              <span >Login Failed!</span>
+          </div>
           <section class="login_content">
             <form th:action="@{/login}" method="post" id="loginform">
               <h1>Login Form</h1>
